# Trabalho-de-Grafos-Grupo-X

./: .gitignore  CMakeLists.txt  Instrucoes.txt  README.md  entrada.txt  execucao.py  experimento1.py  experimento2.py  experimento3.py  orientacoes.txt  saida.txt  saida1.txt  saidaGuloso2.txt  saidaGulosoSparse82True.txt
apps/: grafos_util.cpp  grafos_util.h  greedy_algorithms.h  main.cpp  main1.cpp  main2.cpp  main3.cpp
include/: Arco.h  Cluster.h  Grafo.h  No.h
object/: Arco.cpp  Cluster.cpp  Grafo.cpp  No.cpp
resultados/: 20_10_270001.dot  20_5_270001_clusters_589.000000.dot  metricasGRA.csv
